Add more routing, add stores for encryption